# NickSVChat

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  NickSVChat.code-workspace  README.md  TODO.txt
cmake/: ChatConfig.h.in  InstallTargetDepsRecursive.cmake  NickSVChatConfig.cmake.in  PrintTargetProperties.cmake
doc/: MyChatApp Main Structure.drawio  Protocol.txt  Translator.drawio
doc/doxy/: Doxyfile
docs/: Classes diagram UML.drawio  Requirements.txt  TODO.txt
examples/: CMakeLists.txt  ConsoleChat.cpp  UserName.proto
include/NickSV/Chat/: BasicClientInfo.h  BasicMessage.h  ChatClient.h  ChatConfig.h  ChatServer.h  ChatSocket.h  ClientInfo.h  Defines.h  Definitions.h  IChatClient.h  IChatServer.h  Message.h  Request.h  Serializers.h  Types.h  Utils.h
include/NickSV/Chat/Interfaces/: IChatSocket.h  IParser.h  IRequest.h  ISerializable.h  ISerializer.h
include/NickSV/Chat/Parsers/: BMessageParser.h  BStringParser.h  ClientInfoParser.h  ClientInfoRequestParser.h  MessageParser.h  MessageRequestParser.h  RequestParser.h
include/NickSV/Chat/Requests/: ClientInfoRequest.h  MessageRequest.h  Request.h
include/NickSV/Chat/Serializers/: BClientInfoSerializer.h  BMessageSerializer.h  BStringSerializer.h  ClientInfoRequestSerializer.h  ClientInfoSerializer.h  MessageRequestSerializer.h  MessageSerializer.h
src/: BasicClientInfo.cpp  BasicMessage.cpp  CMakeLists.txt  Chat.cpp  ChatClient.cpp  ChatClientImpl.hpp  ChatServer.cpp  ChatServerImpl.hpp  ChatSocket.cpp  ClientInfo.cpp  Message.cpp  Parsers.cpp  Request.cpp  Requests.cpp  Serializers.cpp  Utils.cpp
src/Parsers/: BMessageParser.hpp  BStringParser.hpp  ClientInfoParser.hpp  ClientInfoRequestParser.hpp  MessageParser.hpp  MessageRequestParser.hpp  RequestParser.hpp
src/Proto/: ClientInfo.proto  Message.proto  Request.proto
src/Requests/: ClientInfoRequest.hpp  MessageRequest.hpp  Request.hpp
src/Serializers/: BClientInfoSerializer.hpp  BMessageSerializer.hpp  BStringSerializer.hpp  ClientInfoRequestSerializer.hpp  ClientInfoSerializer.hpp  MessageRequestSerializer.hpp  MessageSerializer.hpp
tests/: CMakeLists.txt  CMakePresets.json  NickSVChatTest.cpp  test.cpp
